adopt code to new XSD
..and do numerous small code improvements

https://github.com/metasfresh/metasfresh/issues/7085